 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [ZBX-134] fixes for hostid/groupid validation on Node switch (Artem)
 - [ZBX-131] fixed viewing password on install in plain text (Artem)
 - [ZBX-81] fix for item delay calculation problem in graphs (Artem)
 - [ZBX-107] do not display log related items in the queue (Alexei)
 - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
 - [ZBX-102] Distributed monitoring: overwriting information (Sasha)
 - [ZBX-30,ZBX-47] better dependencies (Alexei)
 - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
 - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)
 - [ZBX-59] removed button "Switch Node" (Alexei)
 - [ZBX-19] fixed SMS sending (Sasha)
 - [DEV-46] added "save&return" button in acknowledgement (Artem)
 - [DEV-50] Improved incoming parameters exception validation (Artem)
 - [ZBX-76] Display number of members in host groups (Alexei)
 - [ZBX-92] Distributed monitoring: overwriting new information (Sasha)
 - [DEV-42] Synchronisation of log files (Sasha)
 - [ZBX-90] fixed displaying of last line of a log file in the Latest Data and Overview (Alexei)
 - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
 - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)
 - [ZBX-57] Problem in zbx_tcp_check_security 127.0.0.1 != 127.0.00.1 (Sasha)
 - [ZBX-80] Master node does not display configuration of slave nodes (Sasha)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes for PostgresSQL (Sasha)
 - [ZBX-77] fixes for refreshing page in Monitoring (Artem)