@@ -37,6 +37,7 @@ extern	int	CONFIG_NODEID;
 extern	int	CONFIG_MASTER_NODEID;
 extern	int	CONFIG_DBSYNCER_FORKS;
 extern	int	CONFIG_NODE_NOHISTORY;
+extern  int     CONFIG_REFRESH_UNSUPPORTED;
 
 typedef enum {
 	GRAPH_TYPE_NORMAL = 0,
