@@ -289,12 +289,12 @@ int	process_data(zbx_sock_t *sock,char *server,char *key,char *value,char *lastl
 	DBescape_string(server, server_esc, MAX_STRING_LEN);
 	DBescape_string(key, key_esc, MAX_STRING_LEN);
 
-	result = DBselect("select %s where h.status=%d and h.hostid=i.hostid and h.host='%s' and i.key_='%s' and i.status=%d and i.type in (%d,%d) and" ZBX_COND_NODEID,
+	result = DBselect("select %s where h.status=%d and h.hostid=i.hostid and h.host='%s' and i.key_='%s' and i.status in (%d,%d) and i.type in (%d,%d) and" ZBX_COND_NODEID,
 		ZBX_SQL_ITEM_SELECT,
 		HOST_STATUS_MONITORED,
 		server_esc,
 		key_esc,
-		ITEM_STATUS_ACTIVE,
+		ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED,
 		ITEM_TYPE_TRAPPER,
 		ITEM_TYPE_ZABBIX_ACTIVE,
 		LOCAL_NODE("h.hostid"));
