@@ -22,14 +22,7 @@
 
 extern	int	CONFIG_PINGER_FORKS;
 extern	int	CONFIG_PINGER_FREQUENCY;
-extern	char	*CONFIG_DBHOST;
-extern	char	*CONFIG_DBNAME;
-extern	char	*CONFIG_DBUSER;
-extern	char	*CONFIG_DBPASSWORD;
-extern	char	*CONFIG_DBSOCKET;
 extern	char	*CONFIG_FPING_LOCATION;
-
-extern	int	CONFIG_NODEID;
 
 extern	void	signal_handler( int sig );
 
