@@ -21,8 +21,6 @@
 #ifndef ZABBIX_NODESYNC_H
 #define ZABBIX_NODESYNC_H
 
-extern	int	CONFIG_NODEID;
-
 int	node_sync(char *data, int *sender_nodeid, int *nodeid);
 
 #endif
